# libhtreegeom

./: CMakeLists.txt  HTreeCPackOptions.cmake.in  README.md  htgeom-config.cmake.in  htgeom.cpp  htgeom.h  htgeom_test.cpp  htgeom_types.cpp  htgeom_types.h  run-tests.sh
cmake/: FindHTGeom.cmake
tests/: 01-empty-document.cpp  01-output.txt  02-full-tree.cpp  02-output.txt
